--- a/src/public/about.html
+++ b/src/public/about.html
@@ -6,11 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dotyk</title>
-    <link rel="stylesheet" href="css/Header.css">
-    <link rel="stylesheet" href="css/Site_navigation.css">
-    <link rel="stylesheet" href="css/Section.css">
-    <link rel="stylesheet" href="css/Page.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="../style/css/Header.css">
+    <link rel="stylesheet" href="../style/css/Site_navigation.css">
+    <link rel="stylesheet" href="../style/css/Section.css">
+    <link rel="stylesheet" href="../style/css/Page.css">
+    <link rel="stylesheet" href="../style/css/common.css">
+    <link rel="stylesheet" href="../style/css/About-Section.css">
 
 </head>
 <body>
@@ -24,24 +25,66 @@
             <a href=""><span class="Site_navigation__text"> About Us</span></a>
         </nav>
     </header>
-        <section class="About-Section About-Section_padding67" >
-                <img class="About-Section_img" src="img/girl_and_products.png"
-                     alt="Girl with cosmetics products">
-            <div class="About-Section_Text-Section">
-                <h2 class="About-Section_header">Про нас</h2>
-                <p>
-                    Дотик-це магазин товарів створених з турботою про Вас і планету.
-                    Ми пропонуємо альтернативи пластиковим чи одноразовим товарам для догляду за собою
+    <section class="About-Section About-Section_padding67">
+        <div class="About-Section_Text-Section">
+            <h2 class="About-Section_header">Про нас</h2>
+            <p class="About-Section_text">
+                Дотик-це магазин товарів створених з турботою про Вас і планету.
+                Ми пропонуємо альтернативи пластиковим чи одноразовим товарам для догляду за собою
 
-                    Ми прагнемо, щоб кожен ДОТИК до Твого тіла був сповнений ніжністю та натуральністю.
+            </p>
+            <p class="About-Section_text">
 
-                    Ми регулярно організовуємо, або фінансуємо благодійний проект
+                Ми прагнемо, щоб кожен ДОТИК до Твого тіла був сповнений ніжністю та натуральністю.
 
-                    Наша робота побудована на принципах Zero waste, Organic, Vegan
-                </p>
-            </div>
-        </section>
+            </p>
+            <p class="About-Section_text">
 
+                Ми регулярно організовуємо, або фінансуємо благодійний проект
+
+            </p>
+            <p class="About-Section_text">
+                Наша робота побудована на принципах Zero waste, Organic, Vegan
+            </p>
+        </div>
+        <img class="About-Section_img" src="img/girl_and_products.png"
+             alt="Girl with cosmetics products">
+    </section>
+    <section class="About-Section">
+        <div class="About-Section_Text-Section About-Section_zerowaste">
+            <h2 class="About-Section_header">zero waste</h2>
+            <p class="About-Section_text">
+                В нас Ви знайдете багато альтернатив одноразовим пластиковим товарам. Товари продаються без пластикового
+                упакування. Всю тару заохочуємо повертати. (При поверненні компенсуємо вартість тари). Світ без сміття -
+                це просто і красиво.
+            </p>
+
+
+        </div>
+        <img class="About-Section_img About-Section_zerowaste-image" src="img/flowers_cosmetics.png"
+             alt="Dotyk cosmetics and white flowers">
+    </section>
+    <section class="About-Section">
+        <div class="About-Section_Text-Section About-Section_transparent">
+            <h2 class="About-Section_header">hand made</h2>
+            <p class="About-Section_text">
+                Вся косметика є виготовлена для Вас вручну, що дозволяє наділити кожен продукт особливою формою
+                любові. </p>
+        </div>
+    </section>
+
+    <section class="About-Section">
+        <div class="About-Section_Text-Section About-Section_organic">
+            <div class="About-Section_text-wrapper"><h2 class="About-Section_header">Organic</h2>
+                <p class="About-Section_text">
+                    Наша доглядова косметика виготовлена виключно з природних складників і немістить силікатів, чи
+                    мікропластику. </p></div>
+
+
+        </div>
+        <img class="About-Section_img About-Section_organic-image" src="img/apples.png"
+             alt="Organic cosmetics and apples">
+    </section>
 </div>
 </body>
 </html>
