Refactored some css and added slider demo

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../style/css/Page.css">
     <link rel="stylesheet" href="../style/css/common.css">
     <link rel="stylesheet" href="../style/css/Slider.css">
+    <link rel="stylesheet" href="../style/css/Product.css">
 
 </head>
 <body>
@@ -39,28 +40,43 @@
         </p>
     </section>
     <section class="Slider">
-        <div class="Slider__product">
-            <img src="img/Maslo.png" alt="" class="Section__slider-image">
-            <span class="Product__text">Маселко</span>
-            <span class="Product__price">25.00$</span>
+        <span class="Slider__control prev_button">
+            <i class="text">Previous</i>
+        </span>
+        <div class="Product_wrapper">
+            <div class="Product_wrapper__list">
+                <div class="Slider__product">
+                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                    <span class="Product_wrapper__text">Маселко</span>
+                    <span class="Product_wrapper__price">25.00$</span>
+                </div>
+                <div class="Slider__product">
+                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                    <span class="Product_wrapper__text">Маселко</span>
+                    <span class="Product_wrapper__price">25.00$</span>
+                </div>
+                <div class="Slider__product">
+                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                    <span class="Product_wrapper__text">Маселко</span>
+                    <span class="Product_wrapper__price">25.00$</span>
+                </div>
+                <div class="Slider__product">
+                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                    <span class="Product_wrapper__text">Маселко</span>
+                    <span class="Product_wrapper__price">25.00$</span>
+                </div>
+                <div class="Slider__product">
+                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                    <span class="Product_wrapper__text">Маселко</span>
+                    <span class="Product_wrapper__price">25.00$</span>
+                </div>
+            </div>
         </div>
-        <div class="Slider__product">
-            <img src="img/Maslo.png" alt="" class="Section__slider-image">
-            <span class="Product__text">Маселко</span>
-            <span class="Product__price">25.00$</span>
-        </div>
-        <div class="Slider__product">
-            <img src="img/Maslo.png" alt="" class="Section__slider-image">
-            <span class="Product__text">Маселко</span>
-            <span class="Product__price">25.00$</span>
-        </div>
-        <div class="Slider__product">
-            <img src="img/Maslo.png" alt="" class="Section__slider-image">
-            <span class="Product__text">Маселко</span>
-            <span class="Product__price">25.00$</span>
-        </div>
+        <span class="Slider__control next_button">
+            <i class="text">Next</i>
+        </span>
     </section>
-
 </div>
+<script type="text/javascript" src="../app/slider.js"></script>
 </body>
 </html>
