Fixed slider and added normal webpack config

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -45,30 +45,54 @@
         </span>
         <div class="Product_wrapper">
             <div class="Product_wrapper__list">
-                <div class="Slider__product">
-                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
-                    <span class="Product_wrapper__text">Маселко</span>
-                    <span class="Product_wrapper__price">25.00$</span>
+                <div class="Product_wrapper_available">
+                    <div class="Slider__product">
+                        <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                        <span class="Product_wrapper__text">Маселко1</span>
+                        <span class="Product_wrapper__price">25.00$</span>
+                    </div>
                 </div>
-                <div class="Slider__product">
-                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
-                    <span class="Product_wrapper__text">Маселко</span>
-                    <span class="Product_wrapper__price">25.00$</span>
+                <div class="Product_wrapper_available">
+                    <div class="Slider__product">
+                        <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                        <span class="Product_wrapper__text">Маселко2</span>
+                        <span class="Product_wrapper__price">25.00$</span>
+                    </div>
                 </div>
-                <div class="Slider__product">
-                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
-                    <span class="Product_wrapper__text">Маселко</span>
-                    <span class="Product_wrapper__price">25.00$</span>
+                <div class="Product_wrapper_available">
+                    <div class="Slider__product">
+                        <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                        <span class="Product_wrapper__text">Маселко3</span>
+                        <span class="Product_wrapper__price">25.00$</span>
+                    </div>
                 </div>
-                <div class="Slider__product">
-                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
-                    <span class="Product_wrapper__text">Маселко</span>
-                    <span class="Product_wrapper__price">25.00$</span>
+                <div class="Product_wrapper_available">
+                    <div class="Slider__product">
+                        <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                        <span class="Product_wrapper__text">Маселко4</span>
+                        <span class="Product_wrapper__price">25.00$</span>
+                    </div>
                 </div>
-                <div class="Slider__product">
-                    <img src="img/Maslo.png" alt="" class="Section__slider-image">
-                    <span class="Product_wrapper__text">Маселко</span>
-                    <span class="Product_wrapper__price">25.00$</span>
+                <div class="Product_wrapper_available">
+                    <div class="Slider__product">
+                        <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                        <span class="Product_wrapper__text">Маселко5</span>
+                        <span class="Product_wrapper__price">25.00$</span>
+                    </div>
+                </div>
+                <div class="Product_wrapper_hidden">
+                    <div class="Slider__product">
+                        <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                        <span class="Product_wrapper__text">Маселко6</span>
+                        <span class="Product_wrapper__price">25.00$</span>
+                    </div>
+                </div>
+                <div class="Product_wrapper_hidden">
+                    <div class="Slider__product">
+                        <img src="img/Maslo.png" alt="" class="Section__slider-image">
+                        <span class="Product_wrapper__text">Маселко0</span>
+                        <span class="Product_wrapper__price">25.00$</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -77,6 +101,6 @@
         </span>
     </section>
 </div>
-<script type="text/javascript" src="../app/slider.js"></script>
+<script type="text/javascript" src="../../dist/main.js"></script>
 </body>
 </html>
